--- a/netsim/topology-defaults.yml
+++ b/netsim/topology-defaults.yml
@@ -22,11 +22,12 @@ addressing:
 bgp:
   ebgp_role: external
   advertise_roles: [ stub ]
+  advertise_loopback: True
   no_propagate: [ ebgp_role, advertise_roles, rr_list, as_list ]
   next_hop_self: true
   attributes:
-    global: [ as, next_hop_self, rr_list, ebgp_role, as_list ]
-    node: [ as, next_hop_self, rr ]
+    global: [ as, next_hop_self, rr_list, ebgp_role, as_list, advertise_loopback ]
+    node: [ as, next_hop_self, rr, originate, advertise_loopback ]
     link: [ advertise ]
 
 isis:
@@ -39,9 +40,15 @@ isis:
 
 ospf:
   attributes:
-    global: [ area, process ]
-    node: [ area, process, id ]
+    global: [ area, process, reference_bandwidth ]
+    node: [ area, process, id, reference_bandwidth ]
     link: [ cost, area ]
+
+eigrp:
+  supported_on: [ csr, iosv, nxos ]
+  attributes:
+    global: [ as ]
+    node: [ as ]
 
 sr:
   requires: [ isis ]
