BGP advertise_loopback parameter

--- a/tests/topology/expected/bgp-members.yml
+++ b/tests/topology/expected/bgp-members.yml
@@ -1,4 +1,5 @@
 bgp:
+  advertise_loopback: true
   as_list:
     65000:
       members:
@@ -126,6 +127,7 @@ module:
 name: input
 nodes:
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -181,6 +183,7 @@ nodes:
   - bgp
   name: rr1
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -236,6 +239,7 @@ nodes:
   - bgp
   name: rr2
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -304,6 +308,7 @@ nodes:
   - bgp
   name: pe1
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -372,6 +377,7 @@ nodes:
   - bgp
   name: pe2
 - bgp:
+    advertise_loopback: true
     as: 65001
     neighbors:
     - as: 65000
@@ -406,6 +412,7 @@ nodes:
   - bgp
   name: e1
 - bgp:
+    advertise_loopback: true
     as: 65002
     neighbors:
     - as: 65000
