--- a/tests/topology/expected/module-node-only.yml
+++ b/tests/topology/expected/module-node-only.yml
@@ -1,4 +1,5 @@
 bgp:
+  advertise_loopback: true
   next_hop_self: true
 input:
 - topology/input/module-node-only.yml
@@ -21,6 +22,7 @@ nodes:
   - ospf
   name: r1
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors: []
     next_hop_self: true
