--- a/tests/topology/expected/bgp-ibgp.yml
+++ b/tests/topology/expected/bgp-ibgp.yml
@@ -1,4 +1,5 @@
 bgp:
+  advertise_loopback: true
   as: 65000
   ebgp_role: ''
   next_hop_self: true
@@ -67,6 +68,7 @@ module:
 name: input
 nodes:
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -120,6 +122,7 @@ nodes:
     area: 0.0.0.0
     unnumbered: true
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -173,6 +176,7 @@ nodes:
     area: 0.0.0.0
     unnumbered: true
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
@@ -230,6 +234,7 @@ nodes:
     area: 0.0.0.0
     unnumbered: true
 - bgp:
+    advertise_loopback: true
     as: 65000
     neighbors:
     - as: 65000
