Bug fix: use paramiko connection for Cumulus VX

--- a/netsim/topology-defaults.yml
+++ b/netsim/topology-defaults.yml
@@ -202,4 +202,4 @@ devices:
       ansible_user: vagrant
       ansible_ssh_pass: vagrant
       ansible_network_os: cumulus
-
+      ansible_connection: paramiko
