--- a/tests/topology/expected/bgp.yml
+++ b/tests/topology/expected/bgp.yml
@@ -1,6 +1,12 @@
 bgp:
   advertise_loopback: true
   as: 65000
+  community:
+    ebgp:
+    - standard
+    ibgp:
+    - standard
+    - extended
   next_hop_self: true
 input:
 - topology/input/bgp.yml
@@ -172,6 +178,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
       ipv4: 10.0.0.2
@@ -237,6 +249,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -302,6 +320,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -381,6 +405,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -395,6 +425,7 @@ nodes:
       rr: true
       type: ibgp
     - as: 65002
+      ifindex: 3
       ipv4: 172.31.0.1
       name: e2
       type: ebgp
@@ -458,6 +489,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65001
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
       ifindex: 1
@@ -506,8 +543,15 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65002
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors:
     - as: 65000
+      ifindex: 1
       ipv4: 172.31.0.2
       name: pe2
       type: ebgp
