--- a/tests/topology/expected/module-node-only.yml
+++ b/tests/topology/expected/module-node-only.yml
@@ -1,5 +1,11 @@
 bgp:
   advertise_loopback: true
+  community:
+    ebgp:
+    - standard
+    ibgp:
+    - standard
+    - extended
   next_hop_self: true
 input:
 - topology/input/module-node-only.yml
@@ -24,6 +30,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors: []
     next_hop_self: true
   box: cisco/iosv
