--- a/tests/topology/expected/module-node-params.yml
+++ b/tests/topology/expected/module-node-params.yml
@@ -1,6 +1,12 @@
 bgp:
   advertise_loopback: true
   as: 65000
+  community:
+    ebgp:
+    - standard
+    ibgp:
+    - standard
+    - extended
   next_hop_self: true
 input:
 - topology/input/module-node-params.yml
@@ -29,6 +35,12 @@ nodes:
 - bgp:
     advertise_loopback: true
     as: 65000
+    community:
+      ebgp:
+      - standard
+      ibgp:
+      - standard
+      - extended
     neighbors: []
     next_hop_self: true
   box: cisco/iosv
