Calculate required BGP AF based on BGP neighbor AF

--- a/tests/topology/expected/bgp-community.yml
+++ b/tests/topology/expected/bgp-community.yml
@@ -23,6 +23,7 @@ nodes:
       - standard
       ibgp:
       - standard
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.2
@@ -56,6 +57,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -88,6 +90,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
