--- a/tests/topology/expected/bgp-ibgp.yml
+++ b/tests/topology/expected/bgp-ibgp.yml
@@ -82,6 +82,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.3
@@ -142,6 +143,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.3
@@ -202,6 +204,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -266,6 +269,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
