--- a/tests/topology/expected/bgp.yml
+++ b/tests/topology/expected/bgp.yml
@@ -184,6 +184,8 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
+    ipv6: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.2
@@ -255,6 +257,8 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
+    ipv6: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -326,6 +330,8 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
+    ipv6: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -411,6 +417,8 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
+    ipv6: true
     neighbors:
     - as: 65000
       ipv4: 10.0.0.1
@@ -549,6 +557,7 @@ nodes:
       ibgp:
       - standard
       - extended
+    ipv4: true
     neighbors:
     - as: 65000
       ifindex: 1
